k8s/task-service-k8s/task-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service-deployment
  namespace: ts
  labels:
    app: task-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-service
  template:
    metadata:
      labels:
        app: task-service
    spec:
      containers:
      - name: task-service
        image: whalecch/task-service:latest
        ports:
        - containerPort: 5001
