k8s/task-service-k8s/task-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: task-service
  name: task-service-svc
  namespace: ts
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 5001
    nodePort: 30001
  selector:
    app: task-service
  type: NodePort
