k8s/task-service-k8s/task-service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-service-ingress
  namespace: ts
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /tasks
        pathType: Prefix
        backend:
          service:
            name: task-service-svc
            port:
              number: 5001
